--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ padding: 5px 15px;
 cursor: pointer;
 opacity: .8;}
 
-ol {padding-left: 20px;}
+ol {padding-left: 20px;
+	user-select: none;}
 
 ol li {padding: 5px;color:#000;}
 
